--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -36,11 +36,11 @@ RUN apk add --update \
 RUN rm -rf /var/cache/apk/* && rm -rf /tmp/* && \
     curl --insecure https://getcomposer.org/composer.phar -o /usr/bin/composer && chmod +x /usr/bin/composer
 
-ADD symfony.ini /etc/php7/conf.d/
-ADD symfony.ini /etc/php7/cli/conf.d/
-ADD xdebug.ini  /etc/php7/conf.d/
+COPY symfony.ini /etc/php7/conf.d/
+COPY symfony.ini /etc/php7/cli/conf.d/
+COPY xdebug.ini  /etc/php7/conf.d/
 
-ADD symfony.pool.conf /etc/php7/php-fpm.d/
+COPY symfony.pool.conf /etc/php7/php-fpm.d/
 
 CMD ["php-fpm7", "-F"]
 
