--- a/symfony/.php_cs.dist
+++ b/symfony/.php_cs.dist
@@ -3,9 +3,9 @@
 $header = <<<'EOF'
 This file is part of TechnicalTestSymfony4.
 
-@author    Anthony Margerand <anthony.margerand@protonmail.com>
+@author  Anthony Margerand <anthony.margerand@protonmail.com>
+@license http://opensource.org/licenses/gpl-license.php GNU Public License
 @link    https://github.com/RealAestan/TechnicalTestSymfony4
-@license GPL
 EOF;
 
 return PhpCsFixer\Config::create()
